--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -2,7 +2,7 @@
 
 client_id = "695da14ec05f37f6cdd63a2b3c20b444"
 name = "SEOfy - Complete SEO Expert"
-application_url = "https://genre-sean-as-height.trycloudflare.com"
+application_url = "https://bangladesh-jail-hebrew-drugs.trycloudflare.com"
 embedded = true
 
 [build]
@@ -16,9 +16,9 @@ scopes = "read_content,read_customers,read_products,read_themes,write_content,wr
 
 [auth]
 redirect_urls = [
-  "https://genre-sean-as-height.trycloudflare.com/auth/callback",
-  "https://genre-sean-as-height.trycloudflare.com/auth/shopify/callback",
-  "https://genre-sean-as-height.trycloudflare.com/api/auth/callback"
+  "https://bangladesh-jail-hebrew-drugs.trycloudflare.com/auth/callback",
+  "https://bangladesh-jail-hebrew-drugs.trycloudflare.com/auth/shopify/callback",
+  "https://bangladesh-jail-hebrew-drugs.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
