--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -2,12 +2,12 @@
 
 client_id = "fddd9dc89a2aed1a91a8455b44b41c49"
 name = "app-development"
-application_url = "https://identity-urls-cartoon-group.trycloudflare.com"
+application_url = "https://invitation-donor-athens-haiti.trycloudflare.com"
 embedded = true
 
 [build]
 automatically_update_urls_on_dev = true
-dev_store_url = "demo-store-kazi.myshopify.com"
+dev_store_url = "algorithm-with-shop.myshopify.com"
 include_config_on_deploy = true
 
 [access_scopes]
@@ -16,9 +16,9 @@ scopes = "read_content,read_customers,read_products,read_themes,write_content,wr
 
 [auth]
 redirect_urls = [
-  "https://identity-urls-cartoon-group.trycloudflare.com/auth/callback",
-  "https://identity-urls-cartoon-group.trycloudflare.com/auth/shopify/callback",
-  "https://identity-urls-cartoon-group.trycloudflare.com/api/auth/callback"
+  "https://invitation-donor-athens-haiti.trycloudflare.com/auth/callback",
+  "https://invitation-donor-athens-haiti.trycloudflare.com/auth/shopify/callback",
+  "https://invitation-donor-athens-haiti.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
