--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,12 +1,8 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "fddd9dc89a2aed1a91a8455b44b41c49"
-name = "app-development"
-<<<<<<< HEAD
-application_url = "https://invitation-donor-athens-haiti.trycloudflare.com"
-=======
-application_url = "https://queue-detection-vertex-syndication.trycloudflare.com"
->>>>>>> a7a8e453a5796727311340e61b129edaa86d0eed
+client_id = "695da14ec05f37f6cdd63a2b3c20b444"
+name = "SEOfy - Complete SEO Expert"
+application_url = "https://sucking-links-kings-matching.trycloudflare.com"
 embedded = true
 
 [build]
@@ -20,15 +16,9 @@ scopes = "read_content,read_customers,read_products,read_themes,write_content,wr
 
 [auth]
 redirect_urls = [
-<<<<<<< HEAD
-  "https://invitation-donor-athens-haiti.trycloudflare.com/auth/callback",
-  "https://invitation-donor-athens-haiti.trycloudflare.com/auth/shopify/callback",
-  "https://invitation-donor-athens-haiti.trycloudflare.com/api/auth/callback"
-=======
-  "https://queue-detection-vertex-syndication.trycloudflare.com/auth/callback",
-  "https://queue-detection-vertex-syndication.trycloudflare.com/auth/shopify/callback",
-  "https://queue-detection-vertex-syndication.trycloudflare.com/api/auth/callback"
->>>>>>> a7a8e453a5796727311340e61b129edaa86d0eed
+  "https://sucking-links-kings-matching.trycloudflare.com/auth/callback",
+  "https://sucking-links-kings-matching.trycloudflare.com/auth/shopify/callback",
+  "https://sucking-links-kings-matching.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
