--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,13 +1,13 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "fddd9dc89a2aed1a91a8455b44b41c49"
-name = "app-development"
-application_url = "https://queue-detection-vertex-syndication.trycloudflare.com"
+client_id = "695da14ec05f37f6cdd63a2b3c20b444"
+name = "seofy-complete-seo-expert"
+application_url = "https://conferences-australia-supporters-durham.trycloudflare.com"
 embedded = true
 
 [build]
 automatically_update_urls_on_dev = true
-dev_store_url = "demo-store-kazi.myshopify.com"
+dev_store_url = "grocery-shop-23.myshopify.com"
 include_config_on_deploy = true
 
 [access_scopes]
@@ -16,9 +16,9 @@ scopes = "read_content,read_customers,read_products,read_themes,write_content,wr
 
 [auth]
 redirect_urls = [
-  "https://queue-detection-vertex-syndication.trycloudflare.com/auth/callback",
-  "https://queue-detection-vertex-syndication.trycloudflare.com/auth/shopify/callback",
-  "https://queue-detection-vertex-syndication.trycloudflare.com/api/auth/callback"
+  "https://conferences-australia-supporters-durham.trycloudflare.com/auth/callback",
+  "https://conferences-australia-supporters-durham.trycloudflare.com/auth/shopify/callback",
+  "https://conferences-australia-supporters-durham.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
