--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,8 +1,9 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "695da14ec05f37f6cdd63a2b3c20b444"
-name = "seofy-complete-seo-expert"
-application_url = "https://lil-california-correct-sao.trycloudflare.com"
+name = "SEOfy - Complete SEO Expert"
+handle = "seofy-complete-seo-expert"
+application_url = "https://qualifying-cove-consultant-imaging.trycloudflare.com"
 embedded = true
 
 [build]
@@ -16,13 +17,13 @@ scopes = "read_content,read_customers,read_products,read_themes,write_content,wr
 
 [auth]
 redirect_urls = [
-  "https://lil-california-correct-sao.trycloudflare.com/auth/callback",
-  "https://lil-california-correct-sao.trycloudflare.com/auth/shopify/callback",
-  "https://lil-california-correct-sao.trycloudflare.com/api/auth/callback"
+  "https://qualifying-cove-consultant-imaging.trycloudflare.com/auth/callback",
+  "https://qualifying-cove-consultant-imaging.trycloudflare.com/auth/shopify/callback",
+  "https://qualifying-cove-consultant-imaging.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
-api_version = "2024-07"
+api_version = "2024-10"
 
 [pos]
 embedded = false
