--- a/shopify.app.seofy-complete-seo-expert.toml
+++ b/shopify.app.seofy-complete-seo-expert.toml
@@ -10,6 +10,10 @@ embedded = true
 automatically_update_urls_on_dev = true
 dev_store_url = "demo-store-kazi.myshopify.com"
 
+[access_scopes]
+# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
+scopes = "read_content,read_customers,read_products,read_themes,write_content,write_products,write_themes"
+
 [auth]
 redirect_urls = [
   "https://buddy-pmid-players-molecular.trycloudflare.com/auth/callback",
