--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@shopify/app": "3.46.0",
-    "@shopify/cli": "3.46.0"
+    "@shopify/cli": "3.46.0",
+    "dotenv": "^16.4.5"
   },
   "author": "bs830",
   "private": true,
