--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,12 +3,12 @@
 client_id = "695da14ec05f37f6cdd63a2b3c20b444"
 name = "SEOfy - Complete SEO Expert"
 handle = "seofy-complete-seo-expert"
-application_url = "https://applies-reactions-purple-stood.trycloudflare.com"
+application_url = "https://wellington-parental-logo-comment.trycloudflare.com"
 embedded = true
 
 [build]
 automatically_update_urls_on_dev = true
-dev_store_url = "grocery-shop-23.myshopify.com"
+dev_store_url = "algorithm-with-shop.myshopify.com"
 include_config_on_deploy = true
 
 [access_scopes]
@@ -17,9 +17,9 @@ scopes = "read_content,read_customers,read_products,read_themes,write_content,wr
 
 [auth]
 redirect_urls = [
-  "https://applies-reactions-purple-stood.trycloudflare.com/auth/callback",
-  "https://applies-reactions-purple-stood.trycloudflare.com/auth/shopify/callback",
-  "https://applies-reactions-purple-stood.trycloudflare.com/api/auth/callback"
+  "https://wellington-parental-logo-comment.trycloudflare.com/auth/callback",
+  "https://wellington-parental-logo-comment.trycloudflare.com/auth/shopify/callback",
+  "https://wellington-parental-logo-comment.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
