--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@shopify/shopify-api": "^11.3.0",
     "@shopify/shopify-app-express": "^2.1.1",
     "@shopify/shopify-app-session-storage-sqlite": "^1.2.2",
+    "azure-openai": "^0.9.4",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "serve-static": "^1.14.1",
