--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,10 @@
     "@shopify/shopify-app-session-storage-sqlite": "^1.2.2",
     "azure-openai": "^0.9.4",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
     "serve-static": "^1.14.1",
     "sharp": "^0.33.5"
   },
