--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -30,6 +30,7 @@
     "react-leaflet": "^4.2.1",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
+    "trix": "^2.1.13",
     "uuid": "^11.0.2",
     "vite": "^2.8.6"
   },
