--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-query": "^3.34.19",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "trix": "^2.1.13",
     "uuid": "^11.0.2",
