--- a/web/package.json
+++ b/web/package.json
@@ -24,8 +24,7 @@
     "crypto": "^1.0.1",
     "form-data": "^4.0.2",
     "serve-static": "^1.14.1",
-    "sharp": "^0.33.5",
-    "streamifier": "^0.1.1"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
