--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .env
 .env.*
 web/config/config.js
+web/config/*
 
 # Dependency directory
 node_modules
@@ -29,4 +30,4 @@ extensions/*/build
 web/database.sqlite
 
 # fly toml
-fly.toml
+fly.tomlweb/config/config.js
