--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
+    "dotenv": "^16.5.0",
     "form-data": "^4.0.2",
     "serve-static": "^1.14.1",
     "sharp": "^0.33.5"
