--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@shopify/shopify-api": "^11.3.0",
-    "@shopify/shopify-app-express": "^2.1.1",
+    "@shopify/shopify-app-express": "^4.1.1",
     "@shopify/shopify-app-session-storage-sqlite": "^1.2.2",
     "azure-openai": "^0.9.4",
     "compression": "^1.7.4",
@@ -25,7 +25,8 @@
     "dotenv": "^16.5.0",
     "form-data": "^4.0.2",
     "serve-static": "^1.14.1",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
