--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@shopify/app": "3.46.0",
-    "@shopify/cli": "3.46.0"
+    "@shopify/cli": "3.46.0",
+    "@shopify/shopify-app-session-storage": "^3.0.17"
   },
   "author": "bs830",
   "private": true,
