--- a/shopify.app.app-development-safi.toml
+++ b/shopify.app.app-development-safi.toml
@@ -12,7 +12,7 @@ dev_store_url = "algorithm-with-shop.myshopify.com"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_content,read_customers,read_products,write_content,write_products"
+scopes = "read_content,read_customers,read_products,read_themes,write_content,write_products,write_themes"
 
 [auth]
 redirect_urls = [
