--- a/web/package.json
+++ b/web/package.json
@@ -24,9 +24,9 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "form-data": "^4.0.2",
+    "multer": "^1.4.5-lts.2",
     "serve-static": "^1.14.1",
-    "sharp": "^0.33.5",
-    "multer": "^1.4.5-lts.2"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
