--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "form-data": "^4.0.2",
+    "joi": "^17.13.3",
     "mongoose": "^8.14.2",
     "multer": "^1.4.5-lts.2",
     "serve-static": "^1.14.1",
