--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,8 @@
     "form-data": "^4.0.2",
     "mongoose": "^8.14.2",
     "multer": "^1.4.5-lts.2",
+    "puppeteer": "^24.8.2",
+    "purgecss": "^7.0.2",
     "serve-static": "^1.14.1",
     "sharp": "^0.33.5"
   },
