--- a/shopify.app.app-testing-bs23.toml
+++ b/shopify.app.app-testing-bs23.toml
@@ -3,7 +3,7 @@
 client_id = "4a8105f24e04b6b1e217541b65cb7b16"
 name = "app-testing-bs23"
 handle = "app-testing-bs23"
-application_url = "https://camping-ask-wake-surplus.trycloudflare.com"
+application_url = "https://tablets-extraordinary-springer-dat.trycloudflare.com"
 embedded = true
 
 [build]
@@ -12,13 +12,13 @@ dev_store_url = "algorithm-with-shop.myshopify.com"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_content,read_customers,read_products,read_themes,write_content,write_products,write_themes"
+scopes = "read_products,read_themes,write_products,write_themes"
 
 [auth]
 redirect_urls = [
-  "https://camping-ask-wake-surplus.trycloudflare.com/auth/callback",
-  "https://camping-ask-wake-surplus.trycloudflare.com/auth/shopify/callback",
-  "https://camping-ask-wake-surplus.trycloudflare.com/api/auth/callback"
+  "https://tablets-extraordinary-springer-dat.trycloudflare.com/auth/callback",
+  "https://tablets-extraordinary-springer-dat.trycloudflare.com/auth/shopify/callback",
+  "https://tablets-extraordinary-springer-dat.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
